src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/classInstantiatedWithInvalidArgs.wacc
# class instantiation with invalid args

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        int x
    }

    MyClass x = new MyClass {"hello"}
end